<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.charlsgod.moviestest.util.Status" />

        <import type="com.charlsgod.moviestest.util.Resource" />

        <import type="androidx.lifecycle.LiveData" />

        <import type="com.charlsgod.moviestest.model.Movie" />

        <import type="java.util.List" />

        <variable
            name="viewModel"
            type="com.charlsgod.moviestest.ui.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLightColor"
        tools:context=".ui.search.SearchFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/search_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/search_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:navigationIcon="@drawable/ic_drawer"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name">

                <RelativeLayout
                    android:id="@+id/toolbar_container"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/ToolbarText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/app_name" />

                    <ImageButton
                        android:id="@+id/nav_search"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:layout_toStartOf="@id/sort_action"
                        android:background="?attr/actionBarItemBackground"
                        android:contentDescription="@string/search_icon"
                        android:padding="@dimen/grid_2"
                        android:src="@drawable/ic_search" />

                    <ToggleButton
                        android:id="@+id/sort_action"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:layout_toStartOf="@id/layout_action"
                        android:textOn="Top"
                        android:textOff="Popular"
                        android:background="?attr/actionBarItemBackground"
                        android:contentDescription="@string/sort_icon"
                        android:onCheckedChanged="@{(switch, checked) -> viewModel.updateSortType(checked)}"
                        android:padding="@dimen/grid_2" />

                    <ImageButton
                        android:id="@+id/layout_action"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:background="?attr/actionBarItemBackground"
                        android:contentDescription="@string/layout_icon"
                        android:onClick="@{()->viewModel.updateGridLayout()}"
                        android:padding="@dimen/grid_2"
                        app:layoutActionIcon="@{viewModel.columnCount}"
                        tools:src="@drawable/ic_grid" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/query_layout"
            style="@style/TextField"
            android:layout_width="@dimen/plane_00"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/grid_0_5"
            android:hint="@string/hint"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_appbar"
            app:startIconDrawable="@drawable/ic_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/query_input"
                style="@style/Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:onEditorAction="@{(view,actionId,event) -> viewModel.onEditorAction(view,actionId,event)}"
                android:text="@={viewModel.input}"
                app:errorMessage="@{viewModel.errorMessage}"
                app:showSoftInput="@{viewModel.isTyping}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            app:gridColumnCount="@{viewModel.columnCount}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/query_layout"
            app:movieListData="@{viewModel.results}"
            app:visibility="@{viewModel.results.data.size() != 0}" />

        <include
            layout="@layout/loading_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:viewModel="@{viewModel}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
