...
                    android:contentDescription="@string/movie_poster"
                    app:imageUrl="@{viewModel.movie.posterUrl}"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/preview" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_arrow_back"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

...
